Fix overlay by appending to body, covers modal correctly

--- a/frontend/src/components/wrapper.css
+++ b/frontend/src/components/wrapper.css
@@ -11,14 +11,14 @@
   }
   .wrapper::after{
     content:"";
-    position: fixed;
-    border-radius:0;
-    width:100vw;
+    position: absolute;
+    border-radius:10px;
+    width:100%;
     height:0;
     background-color:#373c4f6a;
     top:0px;
     left:0px;
-    z-index:1001;
+    z-index:1;
   }
   .wrapper.cover::after{
     height:100%;
